--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "pydantic>=2.5.0",
     "numpy",
     "scipy",
+    "httpx",
+    "python-dotenv",
+    "websockets>=12.0",
 ]
 
 [project.optional-dependencies]
