feat: Add production-ready enhancements for Anduril portfolio
- Add entity correlation with spatial/temporal track matching
- Add threat classification (CRITICAL/HIGH/MEDIUM/LOW)
- Add entity lifecycle states (TENTATIVE→FIRM→STALE→DROPPED)
- Implement formation detection clustering algorithm
- Add API versioning (/v1/ prefix) with legacy compatibility
- Add CoT WebSocket streaming endpoint (/ws/cot)
- Add task acknowledgment workflow (/v1/tasks/{id}/ack)
- Fix Lattice prod mode with proper EnvironmentError
- Add GitHub Actions CI (pytest, black, mypy, docker)
- Add comprehensive documentation (Architecture, Integration, Roadmap)
- Update console to use SQLite instead of JSONL
- Add 26 new tests (51 total, all passing)

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 # Ghost Sentry Configuration
 
-# Sentinel Hub Credentials
-# Get these at https://apps.sentinel-hub.com/dashboard/#/configurations
-SENTINEL_CLIENT_ID=
-SENTINEL_CLIENT_SECRET=
+# Lattice Integration (prod mode)
+# Get credentials from Anduril Lattice admin
+LATTICE_ENDPOINT=grpc://lattice.example.com:443
+LATTICE_API_KEY=
+
+# API Configuration
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # Edge Configuration
 LOG_LEVEL=INFO
 DATABASE_PATH=ghost_sentry.db
+
+# Sentinel Hub Credentials (optional, for real imagery)
+# Get these at https://apps.sentinel-hub.com/dashboard/#/configurations
+SENTINEL_CLIENT_ID=
+SENTINEL_CLIENT_SECRET=
